manifest/staging/namespaces/klikgeni/laravel-svc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klikgeni-test-deployment
  labels:
    app: klikgeni
spec:
  replicas: 3
  selector:
    matchLabels:
      app: klikgeni-test-deployment
  template:
    metadata:
      labels:
        app: klikgeni-test-deployment
    spec:
      containers:
        - name: klikgeni-test-deployment
          image: geniwhitelabel/backend-service:klikgeni_web_test
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 60
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              scheme: HTTP
              path: /
              port: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          args:
            - "--kubelet-insecure-tls"
            - "--kubelet-preferred-address-types=InternalIP,ExternalIP"
          ports:
            - containerPort: 80
          # volumeMounts:
          #   - mountPath: /var/www/html/public/image
          #     name: laravel-public
          #     subPath: klikgeni-test/public
      # volumes:
      #   - name: laravel-public
      #     persistentVolumeClaim:
      #       claimName: klikgeni-test-public
