manifest/staging/namespaces/klikgeni/laravel-svc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klikgeni-test-internal-service
spec:
  selector:
    app: klikgeni-test-deployment
  ports:
    - port: 80
      protocol: TCP
