manifest/staging/namespaces/klikgeni/laravel-svc/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
    - host: ingress.pembelajaran.my.id
      http:
        paths:
          - backend:
              service:
                name: klikgeni-test-internal-service
                port:
                  number: 80
            pathType: Prefix
            path: /
